[package]
name = "elrs-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# embedded-hal = "0.2.7"
# nb = "1"
# cortex-m = "0.7.6"
# cortex-m-rt = "0.7.1"
# # Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
# panic-halt = "0.2.0"

# [dependencies.stm32f1xx-hal]
# version = "0.10.0"
# features = ["rt", "stm32f103", "medium"]

[dependencies]
# Change stm32f103c8 to your chip name, if necessary.
embassy-stm32 = { version = "0.1.0", features = [ "defmt", "stm32f103c8", "unstable-pac", "memory-x", "time-driver-any", "exti" ]  }
embassy-sync = { version = "0.5.0" }
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.1.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.8", default-features = false }
nb = "1.0.0"
crsf = { version = "1.0.0", path = "../crsf-rs" }

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2
