[package]
name = "elrs-real-diversity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-stm32 = { version = "0.1", features = [ "defmt", "stm32g431cb", "unstable-pac", "memory-x", "time-driver-any", "exti" ]  }
embassy-sync = { version = "0.5.0" }
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.1.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.8", default-features = false }
nb = "1.0.0"
crsf = { git = "https://github.com/tact1m4n3/crsf-rs.git", rev = "a70e0781", features = ["defmt"] }

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2
opt-level = 3
lto = "fat"
